--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Espacio dedicado al back-end de la plataforma",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
