--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon ./src/app.js"
+    "dev": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,18 @@
   },
   "homepage": "https://github.com/Saulrs98/Atemporal-Back-end#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "colors": "^1.4.0",
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15"
   }
 }
