--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "knex": "^1.0.4",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
