--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.26.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.4",
     "morgan": "^1.10.0",
